test/sema/lazy_init.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn main() -> void {
    let x: i32;
    
    if (1) {
        x = 2;
    } else {
        x = 3;
    }

    x;
}

fn modifyImmutable() -> void {
    const x: i32 = 1;
    
    if (1) {
        // CHECK: [[# @LINE + 1 ]]:9: error: 'x' cannot be mutated
        x = 1;
    } else {
        x = 2;
    }

    // CHECK: [[# @LINE + 1 ]]:5: error: 'x' cannot be mutated
    x = 3;
}

fn uninitOneBranch() -> void {
    let x: i32;
    
    if (1) {
        let y: i32;
        y = 1; // init inner 'x'
    } else {
        x = 2;
    }

    // CHECK: [[# @LINE + 1 ]]:5: error: 'x' is not initialized
    x;
}

fn initEveryBranch() -> void {
    let x: i32;
    
    if (1) {
        x = 1;
    } else {
        x = 2;
    }

    // CHECK-NOT: [[# @LINE + 1 ]]:5: error
    x;
}

fn initConditionVar() -> void {
    let x: i32;
    
    // CHECK: [[# @LINE + 1 ]]:14: error: 'x' is not initialized
    if (1 || x) {
        x = 1;
    // CHECK: [[# @LINE + 1 ]]:25: error: 'x' is not initialized
    } else if (false && x == 2) {
        x = 3;
    } else {
        x = 2;
    }

    // CHECK-NOT: [[# @LINE + 1 ]]:5: error
    x;
}

fn loop() -> void {
    const x: i32;
    let y: i32;
    
    while (1) {
        // CHECK: [[# @LINE + 1 ]]:9: error: 'x' cannot be mutated
        x = 1;

        y = 1;
    }
}

fn shadowInitialization() -> void {
    const x: i32;
    
    if (1) {
        // CHECK: [[# @LINE + 1 ]]:15: error: redeclaration of 'x'
        const x: i32;
        // CHECK: [[# @LINE + 1 ]]:9: error: 'x' cannot be mutated
        x = 1;
    } else {
        x = 2;
    }

    x;
}

fn shadowInitialized() -> void {
    let x: i32;
    
    if (1) {
        x = 1;
        // CHECK: [[# @LINE + 1 ]]:15: error: redeclaration of 'x'
        const x: i32;
        x;
    } else {
        x = 2;
    }

    x;
}

fn nestedInLoop(param: i32) -> void {
    let x: i32;

    if (param) {
        while (param) {
            if (param) {
                x = param - 1;
            }

            // CHECK: [[# @LINE + 1 ]]:26: error: 'x' is not initialized
            let y: i32 = x;
        }
    } else {
        while (param) {
            if (param) {
                x = param - 1;
            }

            // CHECK: [[# @LINE + 1 ]]:26: error: 'x' is not initialized
            let y: i32 = x;
        }
    }

    // CHECK: [[# @LINE + 2 ]]:5: error: 'x' is not initialized
    // CHECK: [[# @LINE + 1 ]]:9: error: 'x' is not initialized
    x + x;
}
// CHECK-NOT: {{.*}}
